--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <!-- made by -->
       <p class="text-center m-3 text-white fs-5 fst-italic">
-        made by Chayanin Suatap 123456789
+        made by Panyapat Wongdee 640610650
       </p>
 
       <!-- user card -->
